--- a/parts/grepview/README.dox
+++ b/parts/grepview/README.dox
@@ -3,8 +3,10 @@ Integrates "find|grep" in KDevelop - allows fast searching of multiple files usi
 
 \authors <a href="mailto:bernd AT kdevelop.org">Bernd Gehrmann</a>
 
-\unmaintained This part is currently un-maintained.
+\maintainer <a href="mailto:jens.dagerbo AT swipnet.se">Jens Dagerbo</a> aka teatime
 
 \feature grep works on editor context menu
+
+\bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=grep%20frontend&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">Grep Frontend component at Bugzilla database</a>
 
 */
