--- a/doc/kdevelop/index.docbook
+++ b/doc/kdevelop/index.docbook
@@ -1677,12 +1677,14 @@ Especially on multi language applications, <emphasis>translators</emphasis> won'
 <title>Configuring &kdevelop;</title>
 
 <para>
+(... to be written ...)
 </para>
 
 <sect1 id="initialsetup-general">
 <title>General Configuration Issues</title>
 
 <para>
+(... to be written ...)
 </para>
 </sect1> <!-- initialsetup-general -->
 
@@ -1690,6 +1692,7 @@ Especially on multi language applications, <emphasis>translators</emphasis> won'
 <title>Advanced Configuration</title>
 
 <para>
+(... to be written ...)
 </para>
 </sect1> <!-- initialsetup-advanced -->
 
@@ -3454,6 +3457,7 @@ view and choosing <guimenuitem>Class tool...</guimenuitem>.
 <title>Class Hierarchy</title>
 
 <para>
+(... to be written ...)
 </para>
 
 </sect1> <!-- classhierarchy -->
@@ -4120,6 +4124,7 @@ When you right-click on a <emphasis>subproject</emphasis> in the Overview window
 <indexterm zone="autoproject"><primary>&libtool;</primary></indexterm>
 
 <para>
+(... to be written ...)
 </para>
 
 
@@ -4180,6 +4185,7 @@ CXX = g++
 <title>Automake</title>
 
 <para>
+(... to be written ...)
 </para>
 
 </sect2> <!--automake  -->
@@ -4229,7 +4235,7 @@ CXX = g++
 <indexterm zone="customproject"><primary><filename>Makefile</filename></primary></indexterm>
 <indexterm zone="customproject"><primary><filename>build.xml</filename></primary></indexterm>
 
-<para>
+<para>(... to be written ...)
 </para>
 
 </sect1> <!-- customproject -->
@@ -4239,7 +4245,7 @@ CXX = g++
 <sect1 id="compileroptions">
 <title>Compiler Options</title>
 
-<para>
+<para>(... to be written ...)
 </para>
 
 </sect1> <!-- compileroptions -->
@@ -4249,7 +4255,7 @@ CXX = g++
 <sect1 id="makeoptions">
 <title>Make Options</title>
 
-<para>
+<para>(... to be written ...)
 </para>
 
 </sect1> <!-- makeoptions -->
@@ -4267,7 +4273,7 @@ CXX = g++
 <indexterm zone="buildconfigurations"><primary>build configurations</primary><secondary>multiple</secondary></indexterm>
 
 <para>
-
+(... to be written ...)
 </para>
 
 </sect1> <!-- buildconfigurations -->
@@ -4508,6 +4514,7 @@ via the context menu.
 <title>Setting Breakpoints</title>
 
 <para>
+(... to be written ...)
 </para>
 
 </sect1> <!-- settingbreakpoints -->
@@ -4561,6 +4568,7 @@ breakpoints.
 <indexterm zone="debugger"><primary>toolbar</primary><secondary>debugger</secondary></indexterm>
 
 <para>
+(... to be written ...)
 </para>
 </formalpara>
 
@@ -4574,6 +4582,7 @@ breakpoints.
 <title>Python</title>
 
 <para>
+(... to be written ...)
 </para>
 
 </chapter> --> <!-- python -->
@@ -4584,6 +4593,7 @@ breakpoints.
 <title>PHP</title>
 
 <para>
+(... to be written ...)
 </para>
 </chapter> --> <!-- php -->
 
@@ -4913,6 +4923,7 @@ the button <guibutton>Regenerate</guibutton>.
 <indexterm zone="plugintools"><primary>indentation</primary></indexterm>
 
 <para>
+(... to be written ...)
 </para>
 </formalpara>
 </listitem>
@@ -5392,6 +5403,8 @@ Click <link linkend="uimodes-overview">here</link> to return to the modes overvi
 
 <para>
 <!-- (dummy paragraph to get DTD right) -->
+<!-- LW: Unfortunately, we can't have completely dummy docuemnts -->
+(... to be written ...)
 </para>
 
 </appendix> <!-- app-bibliography -->
