--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-01-09 Amilcar Lucas <a.lucas@tu-bs.de>
+   * Easy access to bug reports of every supported language in the documentation browser (except SQL)
+
 2004-01-07 Amilcar Lucas <a.lucas@tu-bs.de>
    * Updated support for Doxygen 1.3.5 cvs HEAD
 
