*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-01-26 Alexander Dymo <cloudtemple@mksat.net>
+    * Added snippet part by Robert Gruber.
+
 2004-01-24 Jens Dagerbo <jens.dagerbo@swipnet.se>
     * Updated Bookmarks Plugin. Various improvements and fixes.
 
