--- a/doc/api/FutureTasks.dox
+++ b/doc/api/FutureTasks.dox
@@ -28,84 +28,70 @@
     - fix(redesign?) project language switching
     - editor handling could be made a bit saner if editor plugin switching was an after-restart-only feature
     
-  - Language Support
-  
+  - Programming Language Support Parts
     - Create base classes for language support parts:
       - AntlrLanguageSupport
       - AntlrBackgroundParser
       - AntlrProblemReporter
-
     - Same for:
       - YaccLanguageSupport
       - YaccBackgroundParser
       - YaccProblemReporter
-      
-    - There is a possibility to create even something like
+     - There is a possibility to create even something like
       - LanguageSupportBase
 
     Look at java, pascal and ada support parts to get more inspiration. 
     There should be base classes for ada, java and pascal language supports - too much code duplication.
-    
-    - CppSupport
+ 
+    - CppSupportPart
       - Extended "make member" functionality - run on a .h to implement stubs for all unimplemented non-abstract methods
       - Code Refactoring
-
     - text hint type info tooltips (edit mode)
     - text hint value info tooltips (debug mode)
     - Make the language plugin know stuff like what file patterns to look for (for instance, "find in files" needs this)
     
-  - Build Tools / Project Managers
-  
+  - Build tools Parts
     - Show .po files in project management
     - Custom actions for groups, targets and files for project managers:
       - any menu item should be a KAction plugged into KPopupMenu, also we need to define shortcuts for any such action,
         also we should make sure those actions are properly executed from a shortcut.
-    
-    - automake part
+    - AutoProjectPart
       - Should be able to DND files from other targets / file list / konq to add to targets
       - Should loose the experimental crashy and nonstandard "add files" dialog
       - Update configure.in when sub projects are added and the project doesn't use am_edit
-      
     - Keep the correctly cased project name and save it to the project file
 
   - Plugins
-
-    - DocTreeView
+    - DocTreeViewPart
       - Implement plugin system for doctreeview.
       - improve documentation browsing
       - Check if a man page exists before offering the context menu item 'Goto manpage'
       - right click -> set as bookmark in docviewer
-      
     - c++ debugger
       - variable widget
         - set variable by editing the value in the tree
         - cast value by editing the type in the tree
- 
       - disassembly
         - add breakpoint display
         - set breakpoint by selecting a line as in the edit window
         - allow scrolling of disassembled code about and below current limits
         - add source to disassembled code as comments
         - basically just re-work the whole disassemble window :)
-       
       - Bugs
         - Fix "core file" handling
         - Fix "attach to" handling
         - Breakpoints can disappear at odd times
         - When the target program crashes, the debugger can't be started again. (intermittant?)
         - Break on method() - could have multiple methods which require a choice. How to handle this?
-
-    - Classview
+    - ClassViewPart
       - Implement language-dependant plugin system for classview:
       - namespaces/classes/functions are not always applicable to a language, we need a way to correctly
         fill a class view and combo boxes - only a language support can do that properly.
       - Distinguish vanilla c++ support from c++ + Qt extensions and show signals/slots in the class view only with Qt. (is this still valid?)
-
-    - konsole part
+    - KonsoleViewPart
       - Perhaps use konsole part for the application frontend
       - cd's when selecting a file, but doesn't when selecting a dir,
         desired: a menu option to "cd" to that directory
-
     - QEditor
       - Replace editors/qeditor/koReplace.* and editors/qeditor/koFind.* with kdelibs/kutils/kreplace.* and kdelibs/kutils/kfind.*
 
@@ -117,11 +103,8 @@
     - Document manager (not obviously useful)
     - Implement Add Plugin 
     - Show intro page on startup
-
-  - Language Support
-  
-  - Build Tools
-  
+  - Programming Language Support Parts
+  - Build tools Parts
   - Plugins
     - better sourcenav part (all navigation tools should be supported with at least a "back" action - forward much less important)
     - Integrate kontact's TODO-List and knotes plugin. (We need something like a
