CVS_SILENT Update

--- a/doc/kde_app_devel/index.docbook
+++ b/doc/kde_app_devel/index.docbook
@@ -1138,6 +1138,7 @@ integrate it as a preview widget for an HTML editor; used by applications such a
 <sect1 id="c4s4">
 <title>Creating your own Views</title>
 <para>
+Not yet written
 </para>
 </sect1>
 </chapter>
